# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([UnitTestris],[0.1],[ajrich@earthlink.net])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
#AC_PROG_CC
#AC_PROG_INSTALL

# Checks for typedefs, structures, and compiler characteristics.

AC_HEADER_STDBOOL
AC_C_INLINE

#AM settings

AM_INIT_AUTOMAKE([-Wall -Werror])
AM_PATH_CPPUNIT(1.12.1)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
